--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -37,6 +37,26 @@
             </div>
         </div>
     </header>
+
+    <section id="nice">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="box">
+                        <h1>Welcome To Our Studio!</h1>
+                        <h2>ITS NICE TO MEET YOU</h2>
+                        <div class="btn">
+                            <h3>TELL ME MORE</h3>
+                        </div>
+                    </div>
+                    <div class="imgbox d-flex align-items-center">
+                        <img src="Assets New/Assets.2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
