--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -57,6 +57,78 @@
         </div>
     </section>
 
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="textcenter">
+                        <h1>SERVICES</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="box">
+                        <div class="minibox d-flex justify-content-center align-items-center">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-cart-shopping"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h2>E-Commerce</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum iusto aliquid id repellendus
+                            odit? Odio voluptate dolores at! Quam voluptatem minus, ab quo enim quisquam. Placeat quam
+                            atque adipisci laudantium.</h4>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box">
+                        <div class="minibox d-flex justify-content-center align-items-center">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-laptop"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h2>Responsive Design</h2>
+                        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, nisi ad eveniet perferendis
+                            vitae temporibus hic, harum incidunt consectetur, maiores voluptatum adipisci! Odio numquam
+                            praesentium a omnis eaque, facilis vel.</h4>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box">
+                        <div class="minibox d-flex justify-content-center align-items-center">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-lock"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h2>Web Security</h2>
+                        <h4>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos, incidunt quaerat? Ex
+                            reprehenderit neque dicta error quas ratione quia labore voluptate quod, corporis, natus
+                            repudiandae voluptatibus unde, consectetur iure. Repudiandae!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
