--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -129,6 +129,48 @@
         </div>
     </section>
 
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="textcenter">
+                        <h1>PORTOFILIO</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="imgbox d-flex justify-content-between">
+                        <img src="Assets New/Assets.3.jpg" alt="">
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Threads</h4>
+                        <h5>Illustration</h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="imgbox d-flex justify-content-between">
+                        <img src="Assets New/Assets.4.jpg" alt="">
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Explore</h4>
+                        <h5>Graphic Design</h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="imgbox d-flex justify-content-between">
+                        <img src="Assets New/Assets.5.jpg" alt="">
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Finish</h4>
+                        <h5>Identity</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
