--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -141,8 +141,17 @@
             </div>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="imgbox d-flex justify-content-between">
-                        <img src="Assets New/Assets.3.jpg" alt="">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.3.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="textbox text-center">
                         <h4>Threads</h4>
@@ -150,8 +159,17 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="imgbox d-flex justify-content-between">
-                        <img src="Assets New/Assets.4.jpg" alt="">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.4.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="textbox text-center">
                         <h4>Explore</h4>
@@ -159,12 +177,77 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="imgbox d-flex justify-content-between">
-                        <img src="Assets New/Assets.5.jpg" alt="">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.5.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="textbox text-center">
                         <h4>Finish</h4>
                         <h5>Identity</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.6.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Lines</h4>
+                        <h5>Branding</h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.7.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Southwest</h4>
+                        <h5>Website Design</h5>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mainbox">
+                        <div class="imgbox d-flex justify-content-between">
+                            <img src="Assets New/Assets.8.jpg" alt="">
+                            <ul>
+                                <li>
+                                    <div class="icon">
+                                        <i class="fa-solid fa-plus"></i>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="textbox text-center">
+                        <h4>Window</h4>
+                        <h5>Window</h5>
                     </div>
                 </div>
             </div>
