--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -254,6 +254,31 @@
         </div>
     </section>
 
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="textcenter">
+                        <h1>ABOUT</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 d-flex d-flex align-items-center">
+                    <div class="textbox">
+                        <h2><span>2009-2011</span></h2>
+                        <h4><span>Our Humble Beginnings</span></h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
+                            totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
+                            dolore laudantium consectetur!</p>
+                    </div>
+                </div>
+                <div class="col-md-6"></div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
