--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -26,11 +26,11 @@
                             <img src="Assets New/Assets.1.svg" alt="">
                         </div>
                         <nav>
-                            <a href="SERVICES">SERVICES</a>
-                            <a href="PORTFOLIO">PORTFOLIO</a>
-                            <a href="ABOUT">ABOUT</a>
-                            <a href="TEAM">TEAM</a>
-                            <a href="CONTACT">CONTACT</a>
+                            <a class="" href="#services">SERVICES</a>
+                            <a class="" href="#portfolio">PORTFOLIO</a>
+                            <a class="" href="#about">ABOUT</a>
+                            <a class="" href="#team">TEAM</a>
+                            <a class="" href="#contact">CONTACT</a>
                         </nav>
                     </div>
                 </div>
@@ -266,12 +266,17 @@
             </div>
             <div class="row">
                 <div class="col-md-6 d-flex d-flex align-items-center">
-                    <div class="textbox">
-                        <h2><span>2009-2011</span></h2>
-                        <h4><span>Our Humble Beginnings</span></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                            totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo
-                            dolore laudantium consectetur!</p>
+                    <div class="box">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.8.jpg" alt="">
+                        </div>
+                        <div class="textbox">
+                            <h2><span>2009-2011</span></h2>
+                            <h4><span>Our Humble Beginnings</span></h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente,totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6"></div>
