--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -265,14 +265,14 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 d-flex d-flex align-items-center">
+                <div class="col-md-6 d-flex align-items-center">
                     <div class="box">
                         <div class="imgbox">
                             <img src="Assets New/Assets.8.jpg" alt="">
                         </div>
                         <div class="textbox">
-                            <h2><span>2009-2011</span></h2>
-                            <h4><span>Our Humble Beginnings</span></h4>
+                            <h2>2009-2011</h2>
+                            <h4>Our Humble Beginnings</h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
                                 sapiente,totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
                                 incidunt et ea quo dolore laudantium consectetur!</p>
