--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -264,36 +264,34 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-flex align-items-center">
                 <div class="col-md-6">
                     <div class="textbox text-end">
                         <h2>2009-2011</h2>
                         <h4>Our Humble Beginnings</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                            recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            Sunt ut voluptatum eius sapiente,totam
+                            reiciendis temporibus qui quibusdam,
+                            recusandae sit vero unde, sed,
+                            incidunt et ea quo dolore laudantium consectetur!</p>
                     </div>
-                    <div class="col-md-6">
-                        <div class="imgbox">
-                            <img src="Assets New/Assets.9.jpg" alt="">
-                        </div>
+                    <div class="imgbox gln">
+                        <img src="Assets New/Assets.9.jpg" alt="">
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-flex align-items-center">
                 <div class="col-md-6">
                     <div class="imgbox">
                         <img src="Assets New/Assets.10.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="textbox text-start">
-                        <h2>March 2011</h2>
-                        <h4>An Agency is Born</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                            recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                    </div>
+                <div class="textbox text-start">
+                    <h2>March 2011</h2>
+                    <h4>An Agency is Born</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
+                        recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                 </div>
             </div>
             <div class="row"></div>
