--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -264,39 +264,78 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex align-items-center">
+            <div class="row">
                 <div class="col-md-6">
-                    <div class="textbox text-end">
-                        <h2>2009-2011</h2>
-                        <h4>Our Humble Beginnings</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Sunt ut voluptatum eius sapiente,totam
-                            reiciendis temporibus qui quibusdam,
-                            recusandae sit vero unde, sed,
-                            incidunt et ea quo dolore laudantium consectetur!</p>
-                    </div>
-                    <div class="imgbox gln">
-                        <img src="Assets New/Assets.9.jpg" alt="">
+                    <div class="box d-flex align-items-center">
+                        <div class="textbox text-end">
+                            <div class="minibox">
+                                <h2>2009-2011</h2>
+                                <h4>Our Humble Beginnings</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
+                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.9.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row d-flex align-items-center">
+            <div class="row">
                 <div class="col-md-6">
-                    <div class="imgbox">
-                        <img src="Assets New/Assets.10.jpg" alt="">
+                    <div class="box d-flex align-items-center one">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.10.jpg" alt="">
+                        </div>
+                        <div class="textbox text-start">
+                            <div class="minibox">
+                                <h2>March 2011</h2>
+                                <h4>An Agency is Born</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
+                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="textbox text-start">
-                    <h2>March 2011</h2>
-                    <h4>An Agency is Born</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                        recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="box d-flex align-items-center two">
+                        <div class="textbox text-end">
+                            <div class="minibox">
+                                <h2>December 2015</h2>
+                                <h4>Transition to Full Service</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
+                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
+                            </div>
+                        </div>
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.11.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="box d-flex align-items-center three">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.12.jpg" alt="">
+                        </div>
+                        <div class="textbox text-start">
+                            <div class="minibox">
+                                <h2>March 2011</h2>
+                                <h4>An Agency is Born</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
+                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
