--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -32,6 +32,12 @@
                             <a class="" href="#team">TEAM</a>
                             <a class="" href="#contact">CONTACT</a>
                         </nav>
+                        <div class="btn">
+                            <h1>MENU</h1>
+                            <div class="icon">
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -48,9 +54,9 @@
                         <div class="btn">
                             <h3>TELL ME MORE</h3>
                         </div>
-                    </div>
-                    <div class="imgbox d-flex align-items-center">
-                        <img src="Assets New/Assets.2.jpg" alt="">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.2.jpg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
