--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-md-4">
                     <div class="box">
                         <div class="minibox d-flex justify-content-center align-items-center">
@@ -145,9 +145,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="col-md-4">
-                    <div class="mainbox">
+                    <div class="mainbox ">
                         <div class="imgbox d-flex justify-content-between">
                             <img src="Assets New/Assets.3.jpg" alt="">
                             <ul>
@@ -163,8 +163,6 @@
                         <h4>Threads</h4>
                         <h5>Illustration</h5>
                     </div>
-                </div>
-                <div class="col-md-4">
                     <div class="mainbox">
                         <div class="imgbox d-flex justify-content-between">
                             <img src="Assets New/Assets.4.jpg" alt="">
@@ -199,10 +197,6 @@
                         <h4>Finish</h4>
                         <h5>Identity</h5>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
                     <div class="mainbox">
                         <div class="imgbox d-flex justify-content-between">
                             <img src="Assets New/Assets.6.jpg" alt="">
@@ -237,8 +231,6 @@
                         <h4>Southwest</h4>
                         <h5>Website Design</h5>
                     </div>
-                </div>
-                <div class="col-md-4">
                     <div class="mainbox">
                         <div class="imgbox d-flex justify-content-between">
                             <img src="Assets New/Assets.8.jpg" alt="">
@@ -272,7 +264,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="box d-flex align-items-center">
+                    <div class="box  d-flex align-items-center justify-content-center">
                         <div class="textbox text-end">
                             <div class="minibox">
                                 <h2>2009-2011</h2>
@@ -290,7 +282,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="box d-flex align-items-center one">
+                    <div class="box d-flex align-items-center justify-content-center one">
                         <div class="imgbox">
                             <img src="Assets New/Assets.10.jpg" alt="">
                         </div>
@@ -308,7 +300,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="box d-flex align-items-center two">
+                    <div class="box d-flex align-items-center justify-content-center two">
                         <div class="textbox text-end">
                             <div class="minibox">
                                 <h2>December 2015</h2>
@@ -326,7 +318,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="box d-flex align-items-center three">
+                    <div class="box d-flex align-items-center justify-content-center three">
                         <div class="imgbox">
                             <img src="Assets New/Assets.12.jpg" alt="">
                         </div>
