--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -47,20 +47,18 @@
     <section id="nice">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="box">
-                        <h1>Welcome To Our Studio!</h1>
-                        <h2>ITS NICE TO MEET YOU</h2>
-                        <div class="btn">
-                            <h3>TELL ME MORE</h3>
-                        </div>
-                        <div class="imgbox">
-                            <img src="Assets New/Assets.2.jpg" alt="">
+                <div class="col-md-12">
+                    <div class="box d-flex justify-content-center align-items-center">
+                        <div class="textbox text-center">
+                            <h1>Welcome To Our Studio!</h1>
+                            <h2>ITS NICE TO MEET YOU</h2>
+                            <div class="btn">
+                                <h3>TELL ME MORE</h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
     <section id="services">
@@ -146,7 +144,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                     <div class="mainbox ">
                         <div class="imgbox d-flex justify-content-between">
                             <img src="Assets New/Assets.3.jpg" alt="">
@@ -258,21 +256,19 @@
                 <div class="col-md-12 text-center">
                     <div class="textcenter">
                         <h1>ABOUT</h1>
-                        <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                        <h3>Lorem ipsum dolor sit amet consectetur</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="box  d-flex align-items-center justify-content-center">
+                <div class="col-lg-4">
+                    <div class="box d-flex align-items-center">
                         <div class="textbox text-end">
-                            <div class="minibox">
-                                <h2>2009-2011</h2>
-                                <h4>Our Humble Beginnings</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
-                            </div>
+                            <h2>2009-2011</h2>
+                            <h4>Our Humble Beginnings</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, doloremque? Sapiente
+                                explicabo magni quisquam maxime perspiciatis sed rem omnis, ut voluptates repudiandae
+                                quaerat consequatur unde ea molestias similique maiores dolores.</p>
                         </div>
                         <div class="imgbox">
                             <img src="Assets New/Assets.9.jpg" alt="">
@@ -281,56 +277,132 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="box d-flex align-items-center justify-content-center one">
+                <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="box d-flex align-items-center">
                         <div class="imgbox">
                             <img src="Assets New/Assets.10.jpg" alt="">
                         </div>
                         <div class="textbox text-start">
-                            <div class="minibox">
-                                <h2>March 2011</h2>
-                                <h4>An Agency is Born</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
-                            </div>
+                            <h2>March 2011</h2>
+                            <h4>An Agency is Born</h4>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente, minus alias in
+                                commodi
+                                suscipit. Animi aspernatur voluptate error nostrum numquam ab totam itaque. Eum placeat
+                                magnam
+                                rem enim. Laborum.</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+        </div>
+    </section>
+
+    <section id="our">
+        <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="box d-flex align-items-center justify-content-center two">
-                        <div class="textbox text-end">
-                            <div class="minibox">
-                                <h2>December 2015</h2>
-                                <h4>Transition to Full Service</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
-                            </div>
-                        </div>
-                        <div class="imgbox">
-                            <img src="Assets New/Assets.11.jpg" alt="">
-                        </div>
+                <div class="col-md-12">
+                    <div class="textbox text-center">
+                        <h1>OUR AMAZING TEAM</h1>
+                        <h3>Lorem ipsum dolor sit amet consectetur</h3>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="box d-flex align-items-center justify-content-center three">
+                <div class="col-md-4 d-flex justify-content-center">
+                    <div class="box">
                         <div class="imgbox">
-                            <img src="Assets New/Assets.12.jpg" alt="">
+                            <img src="Assets New/Assets.13.jpg" alt="">
                         </div>
-                        <div class="textbox text-start">
-                            <div class="minibox">
-                                <h2>March 2011</h2>
-                                <h4>An Agency is Born</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                    Sunt ut voluptatum eius sapiente,totam reiciendis temporibus qui quibusdam,
-                                    recusandae sit vero unde, sed,incidunt et ea quo dolore consectetur!</p>
-                            </div>
+                        <div class="textbox">
+                            <h2>Parveen Anand</h2>
+                            <h4>Lead Designer</h4>
                         </div>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center">
+                    <div class="box">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.14.jpg" alt="">
+                        </div>
+                        <div class="textbox">
+                            <h2>Diana Petersen</h2>
+                            <h4>Lead Marketer</h4>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center">
+                    <div class="box">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.15.jpg" alt="">
+                        </div>
+                        <div class="textbox">
+                            <h2>Larry Parker</h2>
+                            <h4>Lead Developer</h4>
+                        </div>
+                        <ul>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center">
+                    <div class="textbox text-center">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis,
+                            quos non quis ad
+                            perspiciatis, totam corporis ea, alias ut unde.</p>
                     </div>
                 </div>
             </div>
