--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -261,9 +261,9 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="box d-flex align-items-center">
-                        <div class="textbox text-end">
+                <div class="col-md-12">
+                    <div class="box">
+                        <div class="textbox">
                             <h2>2009-2011</h2>
                             <h4>Our Humble Beginnings</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, doloremque? Sapiente
@@ -274,31 +274,53 @@
                             <img src="Assets New/Assets.9.jpg" alt="">
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 mb-4">
-                    <div class="box d-flex align-items-center">
+                    <div class="box right justify-content-end">
                         <div class="imgbox">
                             <img src="Assets New/Assets.10.jpg" alt="">
                         </div>
                         <div class="textbox text-start">
                             <h2>March 2011</h2>
                             <h4>An Agency is Born</h4>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed sapiente, minus alias in
-                                commodi
-                                suscipit. Animi aspernatur voluptate error nostrum numquam ab totam itaque. Eum placeat
-                                magnam
-                                rem enim. Laborum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="textbox">
+                            <h2>2009-2011</h2>
+                            <h4>Our Humble Beginnings</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, doloremque? Sapiente
+                                explicabo magni quisquam maxime perspiciatis sed rem omnis, ut voluptates repudiandae
+                                quaerat consequatur unde ea molestias similique maiores dolores.</p>
+                        </div>
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.11.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="box d-flex justify-content-end right">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.12.jpg" alt="">
+                        </div>
+                        <div class="textbox text-start">
+                            <h2>July 2020</h2>
+                            <h4>Phase Two Expansion</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
+                                sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed,
+                                incidunt et ea quo dolore laudantium consectetur!</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-        </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="mainbox yellow">
+                        <div class="minibox d-flex align-items-center">
+                            <h2>Be Part Of Our Story!</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
 
     <section id="our">
@@ -403,6 +425,41 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis,
                             quos non quis ad
                             perspiciatis, totam corporis ea, alias ut unde.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="companies">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center align-items-center">
+                    <div class="box">
+                        <div class="imgbox microsoft">
+                            <img src="Assets New/Assets.16..svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center align-items-center">
+                    <div class="box">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.17.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center align-items-center">
+                    <div class="box">
+                        <div class="imgbox">
+                            <img src="Assets New/Assets.18.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 d-flex justify-content-center align-items-center">
+                    <div class="box">
+                        <div class="imgbox ibm">
+                            <img src="Assets New/Assets.19.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
