--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -26,11 +26,11 @@
                             <img src="Assets New/Assets.1.svg" alt="">
                         </div>
                         <nav>
-                            <a class="" href="#services">SERVICES</a>
-                            <a class="" href="#portfolio">PORTFOLIO</a>
-                            <a class="" href="#about">ABOUT</a>
-                            <a class="" href="#team">TEAM</a>
-                            <a class="" href="#contact">CONTACT</a>
+                            <a href="#services">SERVICES</a>
+                            <a href="#portfolio">PORTFOLIO</a>
+                            <a href="#about">ABOUT</a>
+                            <a href="#our">TEAM</a>
+                            <a href="#contact">CONTACT</a>
                         </nav>
                         <div class="btn">
                             <h1>MENU</h1>
@@ -464,6 +464,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section>
+
     </section>
 
 </body>
