--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -47,8 +47,8 @@
     <section id="nice">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <div class="box d-flex justify-content-center align-items-center">
+                <div class="col-md-12 d-flex justify-content-center align-items-center">
+                    <div class="box">
                         <div class="textbox text-center">
                             <h1>Welcome To Our Studio!</h1>
                             <h2>ITS NICE TO MEET YOU</h2>
