--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -136,17 +136,17 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
-                    <div class="textcenter">
+                <div class="col-md-12">
+                    <div class="textbox text-center">
                         <h1>PORTOFILIO</h1>
                         <h3>Lorem ipsum dolor sit amet consectetur.</h3>
                     </div>
                 </div>
             </div>
-            <div class="row text-center">
-                <div class="col-sm-4">
-                    <div class="mainbox ">
-                        <div class="imgbox d-flex justify-content-between">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.3.jpg" alt="">
                             <ul>
                                 <li>
@@ -156,13 +156,15 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="textbox">
+                            <h4>Threads</h4>
+                            <h5>Illustration</h5>
+                        </div>
                     </div>
-                    <div class="textbox text-center">
-                        <h4>Threads</h4>
-                        <h5>Illustration</h5>
-                    </div>
-                    <div class="mainbox">
-                        <div class="imgbox d-flex justify-content-between">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.4.jpg" alt="">
                             <ul>
                                 <li>
@@ -173,14 +175,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="textbox text-center">
+                    <div class="textbox">
                         <h4>Explore</h4>
                         <h5>Graphic Design</h5>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="mainbox">
-                        <div class="imgbox d-flex justify-content-between">
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.5.jpg" alt="">
                             <ul>
                                 <li>
@@ -191,12 +193,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="textbox text-center">
+                    <div class="textbox">
                         <h4>Finish</h4>
                         <h5>Identity</h5>
                     </div>
-                    <div class="mainbox">
-                        <div class="imgbox d-flex justify-content-between">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.6.jpg" alt="">
                             <ul>
                                 <li>
@@ -207,14 +211,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="textbox text-center">
+                    <div class="textbox">
                         <h4>Lines</h4>
                         <h5>Branding</h5>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="mainbox">
-                        <div class="imgbox d-flex justify-content-between">
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.7.jpg" alt="">
                             <ul>
                                 <li>
@@ -225,12 +229,14 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="textbox text-center">
+                    <div class="textbox ">
                         <h4>Southwest</h4>
                         <h5>Website Design</h5>
                     </div>
-                    <div class="mainbox">
-                        <div class="imgbox d-flex justify-content-between">
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="box d-flex justify-content-center">
+                        <div class="imgbox">
                             <img src="Assets New/Assets.8.jpg" alt="">
                             <ul>
                                 <li>
@@ -240,10 +246,10 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="textbox text-center">
-                        <h4>Window</h4>
-                        <h5>Window</h5>
+                        <div class="textbox">
+                            <h4>Window</h4>
+                            <h5>Window</h5>
+                        </div>
                     </div>
                 </div>
             </div>
