--- a/NewStart/index.html
+++ b/NewStart/index.html
@@ -262,8 +262,8 @@
         <section id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="textcenter">
+                    <div class="col-md-12">
+                        <div class="text-center">
                             <h1>ABOUT</h1>
                             <h3>Lorem ipsum dolor sit amet consectetur</h3>
                         </div>
@@ -285,11 +285,11 @@
                                 <img src="Assets New/Assets.9.jpg" alt="">
                             </div>
                         </div>
-                        <div class="box right justify-content-end">
+                        <div class="box d-flex justify-content-end right">
                             <div class="imgbox">
                                 <img src="Assets New/Assets.10.jpg" alt="">
                             </div>
-                            <div class="textbox text-start">
+                            <div class="textbox">
                                 <h2>March 2011</h2>
                                 <h4>An Agency is Born</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius
@@ -326,8 +326,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <div class="mainbox yellow">
+                    <div class="col-md-12 d-flex yellow">
+                        <div class="story d-flex">
                             <div class="minibox d-flex align-items-center">
                                 <h2>Be Part Of Our Story!</h2>
                             </div>
